fix(engagement.tab-halo): add position fixed to apply z-index

--- a/engagement/tab-halo/main.scss
+++ b/engagement/tab-halo/main.scss
@@ -20,6 +20,7 @@
 .vvc-th {
   font-family: 'Hind', sans-serif;
   z-index: 2147483647;
+  position: fixed;
   .vvc-th-tab {
     transform: rotate(-90deg);
     position: fixed;
